fix tooltip for user css change z-index

--- a/src/theme/css/tooltipUser.css
+++ b/src/theme/css/tooltipUser.css
@@ -5,6 +5,7 @@
 .rc-tooltip {
   opacity: 1;
   transition: .2s ease-in-out;
+  z-index: 99999999;
 }
 
 .rc-tooltip.animation-enter,
